src/objects/Activity_Outcomes__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <referenceTo>Activity_Type__c</referenceTo>
        <relationshipLabel>Activity Outcomes</relationshipLabel>
        <relationshipName>Activity_Outcomes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Can_Close_SR__c</fullName>
        <description>Duplicates logic in Worfkflow for closing the parent SR based on activity outcomes.</description>
        <formula>/*  This logic is implemented in workflow rules as of 2014-12-15.  A Formula field mirroring this logic should be put in OUC Activity that workflow rules can leverage in the future.
*/
OR ( CONTAINS(Name, &quot;Close SR&quot;),
     CONTAINS(Name, &quot;Closed,&quot;)
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Can Close SR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Short_Name__c</fullName>
        <formula>Activity_Type__r.Task_Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Name</label>
        <type>Text</type>
    </fields>
    <label>Activity Outcome</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Activity_Type__c</columns>
        <columns>Task_Short_Name__c</columns>
        <columns>NAME</columns>
        <columns>Can_Close_SR__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_closed</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>Activity_Type__c</columns>
        <columns>Task_Short_Name__c</columns>
        <columns>NAME</columns>
        <columns>Can_Close_SR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Can_Close_SR__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Outcomes that will Close the parent SR</label>
    </listViews>
    <listViews>
        <fullName>Outcomes_Not_closing</fullName>
        <columns>Activity_Type__c</columns>
        <columns>Task_Short_Name__c</columns>
        <columns>NAME</columns>
        <columns>Can_Close_SR__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Can_Close_SR__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Outcomes that will NOT close the SR</label>
    </listViews>
    <nameField>
        <label>Allowable Outcomes</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Outcomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>